--- a/style.css
+++ b/style.css
@@ -7,18 +7,23 @@
     background-color: transparent;
     
 }
+
 #date {
     text-align: center;
     margin-top: 2.5rem;
     color: #f0e516;
     background-color: rgba(0, 0, 0, 0.751);
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     font-weight: 200; 
     text-transform: uppercase; 
-    height: 14vh;
-    width: 15vw;
-    border-radius: 16px;
-    top: 1%;
+    height: 19vh;
+    width: 12vw;
+    border-radius: 18px;
+    top: 2%;
+    align-items: center;
+    padding: 0.9rem;
+   margin-left: 0.5%;
+    margin-top: 17%;
 }
 
 #container {
@@ -33,6 +38,7 @@ background-size: cover;
 background-position: center; 
 
       display: flex;
+      justify-content: center;
 }
 
 #container #location {
@@ -40,7 +46,7 @@ background-position: center;
     width: 100%;
     position: absolute;
     left: 0%;
-    top: 21%;
+    top: 8%;
     display: flex;
     justify-content: center;
     flex-direction: row;
@@ -48,7 +54,7 @@ background-position: center;
 
 #container input {
     height: 50px;
-    width: 250px;
+    width: 300px;
     margin: 0px 20px;
     padding: 0 20px;
     left: 0%;
@@ -57,7 +63,8 @@ background-position: center;
     background: white;
     font-size: 20px;
     color: black;
-    border-radius: 32px;
+    border-radius: 16px;
+    position: relative;
 }
 
 #container input::placeholder {
@@ -67,7 +74,7 @@ background-position: center;
 #container input[type="submit"] {
     cursor: pointer;
     width: 150px;
-    background: #195402d0;
+    background: hsla(118, 95%, 46%, 0.816);
     color: white;
     font-weight: 700;
     font-size: 22px;
@@ -94,7 +101,7 @@ background-position: center;
     font-size: 45px;
     position: absolute;
     top: 45%;
-    left: 37%;
+    left: 40%;
 }
 
 #temperature b {
@@ -105,8 +112,8 @@ background-position: center;
     font-size: 20px;
     text-transform: capitalize;
     position: absolute;
-    bottom: 38%;
-    left: 60%;
+    bottom: 42%;
+    left: 62%;
 }
 
 #container ul {
@@ -114,7 +121,7 @@ background-position: center;
     bottom: 17%;
     left: auto;
     right: auto;
-    margin-right: 20%;
+    margin-right: 17%;
 }
 
 #container ul li {
@@ -133,24 +140,24 @@ background-position: center;
 {
   background: #000000d0;
   color: white;
-  padding: 3em;
+  padding: 2em;
   border-radius: 30px;
   width: 100%;
   max-width: 700px;
-  height: 22rem;
+  height: 30rem;
   margin: 1em;
-  margin-top: 12rem;
+  margin-top: 14rem;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 18rem;
   display: flex;
   justify-content: center;
+
 }
 
 .h1
 {
-    margin-left: 18rem;
-    margin-top: 16rem;
+    margin-left: 16rem;
+    margin-top: 22rem;
     font-size: 1.5rem;
     font-family: "myFirstFont"; 
 }
